# Notelet

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  agent.py  memory.py  notes.md  pyproject.toml  server.py  tools.py  tracing.py
.agents/skills/git-release-flow/: SKILL.md
.agents/skills/git-release-flow/agents/: openai.yaml
.github/workflows/: review-agent.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: ChatStream.tsx  Composer.tsx  MemoryPanel.tsx  RuntimeEvents.tsx  StatusBar.tsx
prompts/: review_agent.md
scripts/: review_agent.py
static/: app.css  app.js
templates/: index.html
tests/: test_agent.py  test_memory.py  test_review_agent.py  test_server.py  test_tools.py  test_tracing.py
tests/fixtures/: deepseek.env
