[project]
name = "simple-agent-notes"
version = "0.1.0"
description = "A minimal OpenAI-powered CLI notes agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
