[project]
name = "simple-agent-notes"
version = "0.0.2"
description = "A minimal OpenAI-powered CLI notes agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["-p", "no:cacheprovider"]
testpaths = ["tests"]
norecursedirs = [
    ".pytest_cache",
    ".pytest_tmp",
    ".pytest_tmp_run",
    "pytest_tmp_plain",
    "test_runs",
]
